[package]
name = "rustls-gcp-kms"
description = "TLS client authentication using Google Cloud KMS for rustls"
keywords = ["tls", "kms", "authentication", "security", "cloud"]
categories = ["cryptography", "authentication", "api-bindings"]
repository = "https://github.com/vaporif/rustls-gcp-kms"
version = "0.1.0"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring"] }
google-cloud-kms = { package = "gcloud-kms", version = "1.2" }
google-cloud-gax = { package = "gcloud-gax", version = "1.2" }
thiserror = "1"
futures = "0.3"
sha2 = "0.10"
eyre = "0.6"

[features]
