[package]
name = "rustls-gcp-kms"
description = "TLS client authentication using Google Cloud KMS for rustls"
keywords = ["tls", "kms", "authentication", "security", "cloud"]
categories = ["cryptography", "authentication", "api-bindings"]
repository = "https://github.com/vaporif/rustls-gcp-kms"
version = "0.1.0"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23.15", default-features = false, features = ["ring"] }
google-cloud-kms = { package = "gcloud-kms", version = "1.2" }
google-cloud-gax = { package = "gcloud-gax", version = "1.2" }
thiserror = "2"
futures = "0.3"
sha2 = "0.10"
eyre = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23.15", default-features = false, features = [
  "ring",
  "std",
] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
