[package]
name = "rustls-gcp-kms"
description = "TLS client authentication using Google Cloud KMS for rustls"
keywords = ["tls", "kms", "authentication", "security", "cloud"]
categories = ["cryptography", "authentication", "api-bindings"]
repository = "https://github.com/eigerco/rustls-gcp-kms"
version = "0.1.0"
authors = ["Eiger <hello@eiger.co>"]
homepage = "https://www.eiger.co"
license = "Apache-2.0"
edition = "2021"

[dependencies]
rustls = { version = "0.23.15", default-features = false, features = ["ring"] }
google-cloud-kms = { package = "gcloud-kms", version = "1.2" }
google-cloud-gax = { package = "gcloud-gax", version = "1.2" }
thiserror = "2"
futures = "0.3"
sha2 = "0.10"
eyre = "0.6"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rustls = { version = "0.23.15", default-features = false, features = [
  "ring",
  "std",
] }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[features]
serde = ["dep:serde"]
